--- a/vit_cnn.ipynb
+++ b/vit_cnn.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyMROQUPHURzitoc8yzV0Rip",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -707,22 +705,12 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/SuriyaPriya17/image_processing/blob/main/vit_cnn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 500,
+          "height": 674,
           "referenced_widgets": [
             "f934ab9f232847f9a8cba5e0e762a4b3",
             "2fa94a6620e54d4e80dfef5a405b2891",
@@ -830,7 +818,17 @@
             "\n",
             "CNN (ResNet18) Test Accuracy: 93.69%\n",
             "\n",
-            "Fine-tuning ViT-Base for 2 epochs...\n"
+            "Fine-tuning ViT-Base for 2 epochs...\n",
+            "Epoch [1/2] | Loss: 0.1095 | Acc: 96.90% | Time: 1625.9s\n",
+            "Epoch [2/2] | Loss: 0.0295 | Acc: 99.11% | Time: 1629.1s\n",
+            "Finished fine-tuning ViT-Base!\n",
+            "\n",
+            "ViT Test Accuracy: 97.82%\n",
+            "\n",
+            "================= Final Comparison =================\n",
+            "ResNet18 (CNN) Test Accuracy : 93.69%\n",
+            "ViT-Base (Transformer) Test Accuracy : 97.82%\n",
+            "=====================================================\n"
           ]
         }
       ],
